# MPointers2.0

./: CMakeLists.txt
mpointers_proyecto/: CMakeLists.txt
mpointers_proyecto/memory_manager/: CMakeLists.txt  main.cpp  memory_manager.cpp  memory_manager.h
mpointers_proyecto/mpointers/: CMakeLists.txt  mpointer.h
mpointers_proyecto/protos/: memory_manager.proto
mpointers_proyecto/tests/: CMakeLists.txt  linked_list_test.cpp
